# poke-nav

./: .dockerignore  .gitignore  Cargo.toml  Makefile  README.md
.github/workflows/: server.yml
app/: Cargo.toml  index.html
app/src/: app.rs  event.rs  lib.rs  main.rs  ui.rs  utils.rs
app/src/ui/: state.rs  tabs.rs  widgets.rs
app/src/ui/state/: settings.rs
app/src/ui/tabs/: debug.rs  file_explorer.rs  file_info.rs  map.rs  rom_info.rs  settings.rs  texture_viewer.rs
app/src/ui/widgets/: debug_widget.rs  generic_multi_select.rs  generic_select.rs  hgss_map_headers.rs  nds_dir_actions.rs  nds_file_actions.rs  nds_file_explorer.rs  nds_file_info.rs  nds_fs_tree.rs  nds_fs_tree_filter.rs  nds_path.rs  nstex_mode_selector.rs  nstex_palette_selector.rs  nstex_ref_selector.rs  nstex_viewer.rs  reset_slider.rs  rom_actions.rs  rom_info.rs  settings.rs  text_grid_frame.rs
app/src/ui/widgets/settings/: bar.rs  content.rs
app/src/utils/: file_picker.rs  file_saver.rs  task.rs  textures.rs
core/: Cargo.toml
core/src/: codec.rs  compression.rs  fmt.rs  gfx.rs  lib.rs  platform.rs  rom.rs  rw.rs
core/src/codec/: common.rs  nds.rs
core/src/codec/common/: fmt.rs  rom.rs
core/src/codec/common/rw/: zero_padded_string.rs
core/src/codec/nds/: formats.rs  fs.rs  games.rs  rom.rs
core/src/codec/nds/formats/: gen4_map.rs  gen4_map_data.rs  gen4_map_matrix.rs  hgss_map.rs  narc.rs
core/src/codec/nds/fs/: file.rs  path.rs
core/src/codec/nds/games/: dpp.rs  hgss.rs
core/src/codec/nds/rom/: fs.rs  header.rs
core/src/compression/: blz.rs
core/src/gfx/: rgb555.rs  rgba.rs
core/src/nds/: formats.rs  fs.rs  games.rs  rom.rs
core/src/nds/formats/: gen4_map_matrix.rs  hgss_map_header.rs  narc.rs
core/src/nds/fs/: dir.rs  file.rs
core/src/nds/games/: dpp.rs  hgss.rs
core/src/nds/rom/: header.rs
core/src/platform/nds/: formats.rs  fs.rs  games.rs  rom.rs
core/src/platform/nds/formats/: gen4_map_data.rs  gen4_map_matrix.rs  hgss_map_header.rs  narc.rs  nsbtx.rs  nstex.rs
core/src/platform/nds/formats/nstex/: decode.rs  palette.rs  texture.rs
core/src/platform/nds/fs/: file.rs  path.rs  tree.rs
core/src/platform/nds/games/: dpp.rs  hgss.rs
core/src/platform/nds/rom/: fat.rs  fnt.rs
core/src/rw/: blob.rs  nds_dict.rs  zero_padded_string.rs
server/: Cargo.toml
server/docker/: Dockerfile  docker-compose.yml
server/src/: main.rs
